--- a/homework/hw1/essay.tex
+++ b/homework/hw1/essay.tex
@@ -16,12 +16,18 @@
 
   \begin{center}
   \rowcolors{1}{lightgray}{white}
-    \begin{tabular}{ >{\bfseries}r | l }
+    \begin{tabular}{ >{\bfseries}r | p{3.5in} }
       \hline
       Launch Vehicle & Soyuz and Shuttle \\
-      Crew & Talk about that \\
-      Dates & Figure out the dates \\
-      Mission Summary & Put a summary here \\
+      Crew & Peggy Whitson, 
+             Yuri Malenchenko, 
+             Clayton Anderson, 
+             Daniel Tani,
+             Leopold Eyharts, 
+             Garrett Reisman \\
+      Dates & 10 October 2007 - 19 April 2008 \\
+      Mission Summary & Configuration of the Harmony Module, installation of
+      Columbus and Kibo and arrival of the Jules Verne vehicle \\
       \hline
     \end{tabular}
   \end{center}
@@ -49,6 +55,24 @@
 
   \section{Apollo 8}
 
+  \begin{center}
+  \rowcolors{1}{lightgray}{white}
+    \begin{tabular}{ >{\bfseries}r | p{3.5in} }
+      \hline
+      Launch Vehicle & Soyuz and Shuttle \\
+      Crew & Peggy Whitson, 
+             Yuri Malenchenko, 
+             Clayton Anderson, 
+             Daniel Tani,
+             Leopold Eyharts, 
+             Garrett Reisman \\
+      Dates & 10 October 2007 - 19 April 2008 \\
+      Mission Summary & Configuration of the Harmony Module, installation of
+      Columbus and Kibo and arrival of the Jules Verne vehicle \\
+      \hline
+    \end{tabular}
+  \end{center}
+
   I decided not to include Apollo 11 in this listing, mostly because Apollo 11 was
   too easy of a choice and I wanted to highlight some other missions. For what
   it's worth though, Apollo 8 is a mission about as worthy of our admiration as
@@ -68,6 +92,24 @@
   %<!--![](https://proxy.duckduckgo.com/iu/?u=http%3A%2F%2Fbaptistmessage.com%2Fwp-content%2Fuploads%2F2018%2F12%2FEarthrise.jpg&f=1&nofb=1){ height=180px .centered }-->
 
   \section{Yuri Gagarin's First Flight}
+
+  \begin{center}
+  \rowcolors{1}{lightgray}{white}
+    \begin{tabular}{ >{\bfseries}r | p{3.5in} }
+      \hline
+      Launch Vehicle & Soyuz and Shuttle \\
+      Crew & Peggy Whitson, 
+             Yuri Malenchenko, 
+             Clayton Anderson, 
+             Daniel Tani,
+             Leopold Eyharts, 
+             Garrett Reisman \\
+      Dates & 10 October 2007 - 19 April 2008 \\
+      Mission Summary & Configuration of the Harmony Module, installation of
+      Columbus and Kibo and arrival of the Jules Verne vehicle \\
+      \hline
+    \end{tabular}
+  \end{center}
 
   However, while the moon was certainly a new territory, nothing compares to truly
   venturing out into the unknown. Throughout the first week of this class, even,
