Everything but the pictures

--- a/homework/hw1/essay.tex
+++ b/homework/hw1/essay.tex
@@ -2,6 +2,7 @@
 
 \usepackage[margin=1in]{geometry}
 \usepackage[table]{xcolor}
+\usepackage{graphicx}
 
 \definecolor{lightgray}{gray}{0.8}
 
@@ -32,6 +33,10 @@
     \end{tabular}
   \end{center}
 
+  %\begin{figure}[h]
+    %\includegraphics[height=180px]{https://proxy.duckduckgo.com/iu/?u=http%3A%2F%2Fcdn.wonderfulengineering.com%2Fwp-content%2Fuploads%2F2017%2F04%2FPeggy-Whitson-Longest-Time-In-Space-2.jpg&f=1&nofb=1}
+  %\end{figure}
+
   Valentina Tereshkova often gets credit for being the first woman in space and,
   while this is true, I don't believe it to be quite the equality-seeking movve
   that it's often touted as. Not to diminish Tereshkova's flight by any means, but
@@ -59,16 +64,13 @@
   \rowcolors{1}{lightgray}{white}
     \begin{tabular}{ >{\bfseries}r | p{3.5in} }
       \hline
-      Launch Vehicle & Soyuz and Shuttle \\
-      Crew & Peggy Whitson, 
-             Yuri Malenchenko, 
-             Clayton Anderson, 
-             Daniel Tani,
-             Leopold Eyharts, 
-             Garrett Reisman \\
-      Dates & 10 October 2007 - 19 April 2008 \\
-      Mission Summary & Configuration of the Harmony Module, installation of
-      Columbus and Kibo and arrival of the Jules Verne vehicle \\
+      Launch Vehicle & Saturn V \\
+      Crew & Frank Borman,
+             Jim Lovell,
+             William Anders \\
+      Dates & 21 December 1968 - 27 December 1968 \\
+      Mission Summary & First crewed flight of the Saturn V, first flight to
+      leave Earth Orbit for another celestial body \\
       \hline
     \end{tabular}
   \end{center}
@@ -91,22 +93,16 @@
 
   %<!--![](https://proxy.duckduckgo.com/iu/?u=http%3A%2F%2Fbaptistmessage.com%2Fwp-content%2Fuploads%2F2018%2F12%2FEarthrise.jpg&f=1&nofb=1){ height=180px .centered }-->
 
-  \section{Yuri Gagarin's First Flight}
+  \section{Vostok I}
 
   \begin{center}
   \rowcolors{1}{lightgray}{white}
     \begin{tabular}{ >{\bfseries}r | p{3.5in} }
       \hline
-      Launch Vehicle & Soyuz and Shuttle \\
-      Crew & Peggy Whitson, 
-             Yuri Malenchenko, 
-             Clayton Anderson, 
-             Daniel Tani,
-             Leopold Eyharts, 
-             Garrett Reisman \\
-      Dates & 10 October 2007 - 19 April 2008 \\
-      Mission Summary & Configuration of the Harmony Module, installation of
-      Columbus and Kibo and arrival of the Jules Verne vehicle \\
+      Launch Vehicle & Vostok I \\
+      Crew & Yuri Gagarin \\
+      Dates & 12 April 1961 \\
+      Mission Summary & First manned spaceflight \\
       \hline
     \end{tabular}
   \end{center}
