Finished with research for the day

--- a/homework/hw4/hw_4.tex
+++ b/homework/hw4/hw_4.tex
@@ -30,28 +30,32 @@ ASEN5158 \\
 
   \setstretch{1.25}
 
-  \section{First Section}
-  Paragraph
+  \section{Restraints and Mobility Aids}
+
+  \section{Lack of Vestibular-Cue Orientation}
+
+  \section{Circadian Rhythm}
+
+  \section{Summary}
 
 \begin{thebibliography}{9}
 
-  \bibitem{lange}
-    Kevin Lange, Alan T. Perka, Bruce Duffield, Frank F. Jeng,
-    \textit{Bounding the Spacecraft Atmosphere Design Space for Future Exploration Missions},
+  \bibitem{novak}
+    Brian Peacock, Sudhakar Rajulu, Jennifer Novak.
+    \textit{Human Factors and the International Space Station},
     NASA Johnson Space Flight Center,
-    2005.
 
-  \bibitem{abercromby}
-    Andrew Abercromby, Johnny Conkin, Michael Gernhardt,
-    \textit{Modeling a 15-min extravehicular activity prebreathe protocol using NASA's exploration atmosphere},
-    Acta Astronautica,
-    2015.
+  \bibitem{novak2}
+    Jennifer Novak
+    \textit{Human engineering and habitability: the critical challenges for the International Space Station},
+    Aviation, Space, and Environmental Medicine.
+    2000.
 
-  \bibitem{norcross}
-    Jason Norcross, Johnny Conkin, Grace Douglas,
-    \textit{Risk of Hypoxia from the Exploration Atmosphere 1 Evidence Report: Risk of Hypobaric Hypoxia from the Exploration Atmosphere},
-    NASA Johnson Space Flight Center,
-    2015.
+  \bibitem{lockley}
+    Steven Lockley, George Brainard.
+    \textit{NASA Lighting Effects Study},
+    National Aeronautics and Space Administration.
+    2016.
 
 \end{thebibliography}
 
