Finished. Did this one quickly

--- a/homework/hw4/hw_4.tex
+++ b/homework/hw4/hw_4.tex
@@ -10,9 +10,9 @@
 
 \titleformat{\section}
 {\large\bfseries}
-{Method \thesection}
+{Method \thesection:}
 {0em}
-{: }[]
+{ }[]
 
 \renewcommand{\maketitle}{\hspace{-22px}  \textbf{{\theauthor} \\
 ASEN5158 \\
@@ -32,11 +32,39 @@ ASEN5158 \\
 
   \section{Restraints and Mobility Aids}
 
+  Generally, from a layman's perspective, microgravity is seen as being a freeing experience. And in many ways, it is. However, floating in microgravity can have as many deleterious effects to coordination as it can benefits, which can affect productivity, particularly over short duration missions\cite{novak}. However, there are a number of tools that are commonly used in human spaceflight missions to improve upon the astronauts ability to move around in a habitat.
+
+  \subsection{Footholds}
+
+  The most useful of these, in general, is the foothold. While on Earth humans tend to use their feet to keep them in place by standing upright. Without gravity to provide a downward force though, this kind of maneuvering is at best awkward. However, simply by providing a wrap-around foot hold, a program can allow the astronauts to effectively ``stand'' in place as they perform their work, in much the same way as they would on Earth. This is not a fool-proof method, however, and there may be an adjustment period.
+
+  \subsection{Handholds}
+
+  While not as necessary during ordinary routine operations in ``shirtsleeve'' environments, handholds can provide a valuable lifeline to an astronaut during an EVA. Care must be taken, especially when designing the outer surface of the craft, to place handholds regularly and strategically, as they can be an EVA astronaut's only means of connection to the station (other than their tether).
+
+  These two methods (handholds and footholds) can be used in unison to create an environment for the crew in which furniture, such as the desks, tables and chairs that we see on Earth would largely be unnecessary. An astronaut can float in relative ease in many different positions in space, provided they have some sort of anchor to their surrounding surfaces. This can be very helpful in saving space onboard.
+
   \section{Lack of Vestibular-Cue Orientation}
+
+  One element of life in spaceflight that may not be immediately obvious is the effect that it plays on our sense of orientation. Humans have long adapted to gravity on Earth providing us with a tactil feedback loop that keeps us oriented in space -- our vestibular system. However, in space, this vestibular connection to our surroundings does not exist. 
+
+  There is a second system that we humans use to orient ourselves in space: eyesight. On Earth, we can use both in tandem to provide us with a sense of our surroundings, but the lack of the vestibular feedback has proven to be difficult for some astronauts to become accustomed to.
+
+  To make matters worse, on many crafts, such as the International Space Station, design considerations have caused various components to be increasingly visually similar, due to the advantages that the modularity of the similar designs offers. So astronauts are increasingly living under conditions in which they lack vestibular feedback, and what visual feedback they do get is less distinct than would be ideal for orientation-seeking.
+
+  One solution proposed for this problem (that is currently being employed on the ISS) is a coloring system. In each module, the ``ceiling'' is painted white and the ``floor'' is colored (a different color per room). This provides a visual cue which can be useful to humans who generally prefer to have an oriented `up' and `down' direction.\cite{novak2}
 
   \section{Circadian Rhythm}
 
+  Another often over-looked element of living in space is the irregularity of the lighting. In Low Earth Orbit, for instance, cycles of night and day occur every 90 minutes. Between this continuous lighting change (often directly from the Sun without atmosphere to reduce it), long working hours, and the excitement of being in space, many astronauts have reported insomnia as a major problem on the ISS. All of these factors tend to affect the circadian rhythms of the crew.
+
+  NASA recently decided to change the lighting on the ISS and, while doing that, decided to perform a series of experiments called the ``Lighting Effects Study'' in which the lights would be replaced with LED lighting\cite{lockley}. LEDs are more energy efficient, but they also provide fine-tune control of the color spectrum of light that they give off. The Lighting Effects Study aims to investigate the benefits of being intentional with the hue of the lighting provided, giving a bluer, focus-inducing shade during the workday and reducing blue tones for a few hours before the astronauts go to sleep.
+
+  There is also some interesting research on body-temperature that suggests that, while not complete, the body is capable of adapting to the changing environment, while still maintaining a normal day/night circadian rhythm in some respects.
+
   \section{Summary}
+
+  In summary, we've explored three different ``Human Factor'' design considerations for long-duration spaceflight, including locomotion/coordination, orientation, and circadian rhythms. This list is far from exhaustive, but the methods suggested: hand and footholds, visual orientation cues, and lighting effects, are certainly worth investigating during the mission planning phase of any long duration human spaceflight mission.
 
 \begin{thebibliography}{9}
 
